--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -1,3 +1,12 @@
+@import './sass/layout/grid';
 @import './sass/base/reset';
-@import './sass/components/register';
 @import './sass/utils/utils';
+
+@import './sass/components/register';
+@import './sass/components/messenger';
+@import './sass/components/activeFriend';
+@import './sass/components/friends';
+@import './sass/components/rightSide';
+@import './sass/components/message';
+@import './sass/components/messageSend';
+@import './sass/components/friendInfo';
