add get friends

--- a/frontend/src/sass/components/_rightSide.scss
+++ b/frontend/src/sass/components/_rightSide.scss
@@ -87,10 +87,10 @@
             width: 100%;
         }
         #dot:checked ~ .row .col-8 .message-show .my-message .my-text{
-            width: 500px;
+            width: 100%;
         }
         #dot:checked ~ .row .col-8 .message-show .fd-message .fd-text{
-            width: 500px;
+            width: 100%;
         }
     }
 }
