--- a/frontend/src/sass/components/_message.scss
+++ b/frontend/src/sass/components/_message.scss
@@ -1,4 +1,5 @@
 .message-show{
+    width: 100%;
     height: 100%;
     padding: 10px;
     overflow-y: auto;
@@ -23,11 +24,12 @@
     }
     .my-message{
         float: right;
+        width: 100%;
         .my-text{
             display: flex;
             align-items: flex-end;
             justify-content: flex-end;
-            width: 370px;
+            width: 100%;
             flex-direction: column;
             img.img,span{
                 width: 14px;
@@ -64,11 +66,12 @@
     }
     .fd-message{
         float:  left;
+        width: 100%;
         .fd-text{
             display: flex;
             align-items: flex-end;
             justify-content: flex-start;
-            width: 370px;
+            width: 100%;
             .fd{
                 background-color: var(--fd-message-bg);
                 color: var(--text-color);
