add real time message

--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -10,3 +10,4 @@
 @import './sass/components/message';
 @import './sass/components/messageSend';
 @import './sass/components/friendInfo';
+@import './sass/components/loadingSpinner';
