--- a/frontend/src/sass/components/_friends.scss
+++ b/frontend/src/sass/components/_friends.scss
@@ -8,7 +8,7 @@
         display: none;
     }
     .hover-friend.active{
-        background-color: var( --active-color);
+        background-color: #d5d5d5;
     }
     .hover-friend{
         cursor: pointer;
