update send message

--- a/frontend/src/sass/components/_friends.scss
+++ b/frontend/src/sass/components/_friends.scss
@@ -84,7 +84,7 @@
                         width: 15px;
                         height: 15px;
                         border-radius: 50%;
-                        background-color: aquamarine;
+                        background-color: rgb(76, 98, 173);
                     }
                 }
             }
