--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -523,7 +523,7 @@ label {
 }
 
 .friends .hover-friend.active {
-  background-color: var(--active-color);
+  background-color: #d5d5d5;
 }
 
 .friends .hover-friend {
@@ -638,7 +638,7 @@ label {
   width: 15px;
   height: 15px;
   border-radius: 50%;
-  background-color: aquamarine;
+  background-color: #4c62ad;
 }
 
 .col-9 .right-side {
@@ -780,14 +780,15 @@ label {
 }
 
 .col-9 .right-side #dot:checked ~ .row .col-8 .message-show .my-message .my-text {
-  width: 500px;
+  width: 100%;
 }
 
 .col-9 .right-side #dot:checked ~ .row .col-8 .message-show .fd-message .fd-text {
-  width: 500px;
+  width: 100%;
 }
 
 .message-show {
+  width: 100%;
   height: 100%;
   padding: 10px;
   overflow-y: auto;
@@ -827,6 +828,7 @@ label {
 
 .message-show .my-message {
   float: right;
+  width: 100%;
 }
 
 .message-show .my-message .my-text {
@@ -839,7 +841,7 @@ label {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
-  width: 370px;
+  width: 100%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -884,6 +886,7 @@ label {
 
 .message-show .fd-message {
   float: left;
+  width: 100%;
 }
 
 .message-show .fd-message .fd-text {
@@ -896,7 +899,7 @@ label {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  width: 370px;
+  width: 100%;
 }
 
 .message-show .fd-message .fd-text .fd {
@@ -1070,10 +1073,10 @@ label {
 }
 
 .message-send-section .emoji-section {
-  width: 200px;
+  width: 300px;
   background: #0e131d;
   position: absolute;
-  right: 60px;
+  right: 90px;
   padding: 6px;
   bottom: 50px;
   border-radius: 8px;
@@ -1084,9 +1087,9 @@ label {
 .message-send-section .emoji-section .emoji {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[7];
-      grid-template-columns: repeat(7, 1fr);
-  grid-gap: 4px;
+  -ms-grid-columns: (1fr)[10];
+      grid-template-columns: repeat(10, 1fr);
+  grid-gap: 6px;
 }
 
 .message-send-section .emoji-section .emoji span {
@@ -1218,5 +1221,46 @@ label {
 .friend-info #gallery:checked ~ .gallery {
   display: -ms-grid;
   display: grid;
+}
+
+.spinner-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@-webkit-keyframes spinner {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes spinner {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+.spinner-section .loading-spinner {
+  width: 50px;
+  height: 50px;
+  border: 10px solid #f3f3f3;
+  border-top: 10px solid #383636;
+  border-radius: 50%;
+  -webkit-animation: spinner 1.5s linear infinite;
+          animation: spinner 1.5s linear infinite;
 }
 /*# sourceMappingURL=main.css.map */
